# myExtBot

./: .env.example  .eslintrc.json  .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  config.example.toml  jest.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: llm_smoke.rs  net_smoke.rs
apps/desktop/src-tauri/src/: agent.rs  agent_router.rs  agent_spec.rs  audit.rs  commands.rs  db.rs  events.rs  executor.rs  graph.rs  intervention.rs  lib.rs  llm.rs  main.rs  permissions.rs  planner.rs  ts_bridge.rs  verifier.rs
apps/desktop/src-tauri/src/collab/: bus.rs  mod.rs  registry.rs  types.rs
apps/desktop/src-tauri/src/tools/: cmd.rs  desktop.rs  fs.rs  mod.rs  net.rs
data/: marketplace-index.json
docs/: agent-spec-versioning.md  app.js  architecture.md  audit.md  collab.md  index.html  interventions.md  memory.md  openapi.json  permissions.md  roadmap.md  rungraph.md  style.css  tools.md  verifiers.md
services/playwright-sidecar/: package.json
src/: App.tsx  config.ts  index.ts  server.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  commands.rs  lib.rs  main.rs  state_machine.rs
src/api/: contractRoutes.ts  costRoutes.ts  healthRoutes.ts  (+6 more)
(+82 files in other folders)
